ボタンクリックイベントを検知する練習

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/main_text"
         android:layout_width="139dp"
         android:layout_height="81dp"
         android:text="Hello World!"
@@ -19,12 +20,10 @@
         app:layout_constraintVertical_bias="0.216" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/main_button"
         android:layout_width="179dp"
         android:layout_height="79dp"
         android:text="@string/button"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="326dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
